--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="pull-left col-xs-12 col-sm-5 col-md-6">
                         <i>Books for <span class="text-primary">"<%= field %>"</span></i>
-                        <p><strong><%= section.item.per_page %></strong> of <strong><%= section.item.total %></strong> Book Found</p>
+                        <p><strong><%= section.item.data.length %></strong> of <strong><%= section.item.total %></strong> Book Found</p>
                     </div>
                     <div class="pull-right col-xs-12 col-sm-7 col-md-6">
                         <form class="form-horizontal">
