--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -128,7 +128,7 @@
             orderBy: orderBy
         };
 
-        Book.sortBooksBy(data);
+        Book.ajaxSortBookAtSectionPage(data);
     });
 
     $('#btn-loadmore-category').on('click', function (e) {
