--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -1,4 +1,4 @@
-<section>
+<section data-field="<%= field %>">
     <div class="space-80"></div>
     <div class="container">
         <div class="row">
@@ -75,7 +75,11 @@
                 <div class="space-60"></div>
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <a href="javascript:void(0)" class="btn btn-warning btn-xs btn-loadmore-book" data-field="<%= field %>" data-next-page="<%= section.item.next_page %>" data-current-page="<%= section.item.current_page %>">More</a>
+                        <a href="javascript:void(0)"
+                           class="btn btn-warning btn-xs btn-loadmore-book"
+                           data-next-page="<%= section.item.next_page %>"
+                           data-current-page="<%= section.item.current_page %>">More
+                        </a>
                     </div>
                 </div>
             </div>
@@ -110,25 +114,32 @@
 <script src="/javascripts/books/book.js" type="text/javascript"></script>
 <script type="text/javascript">
     $('.btn-loadmore-book').on('click', function () {
-        var nextPage = $(this).attr('data-next-page');
-        var field = $(this).attr('data-field');
-        Book.loadMoreAtSectionPage(field, nextPage);
+        var nextPage = $(this).attr('data-next-page') !== undefined ? $(this).attr('data-next-page') : 1;
+        var field = $('section').attr('data-field');
+        if (field === undefined) {
+            location.reload();
+        }
+
+        Book.loadMoreBook({field: field, nextPage: nextPage});
     });
 
     $('#sort-book').on('change', function (e) {
         var sortBy = $('#sort-book').val();
         var orderBy = $('#sort-book :selected').parent().attr('data-order-by');
-        var field = $('.btn-loadmore-book').attr('data-field');
-        var currentPage = $('.btn-loadmore-book').attr('data-current-page');
-
+        var field = $('section').attr('data-field');
+        var currentPage = $('.btn-loadmore-book').attr('data-current-page') !== undefined ?
+            $('.btn-loadmore-book').attr('data-current-page') : 1;
         var data = {
             field: field,
             currentPage: currentPage,
             sortBy: sortBy,
             orderBy: orderBy
         };
+        if (field === undefined || sortBy === undefined) {
+            location.reload();
+        }
 
-        Book.ajaxSortBookAtSectionPage(data);
+        Book.ajaxSortBook(data);
     });
 
     $('#btn-loadmore-category').on('click', function (e) {
