--- a/views/books/category.ejs
+++ b/views/books/category.ejs
@@ -73,17 +73,14 @@
                     <% }) %>
                 </div>
                 <div class="space-60"></div>
-                <% if (books.item.next_page !== null) { %>
                 <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <a href="javascript:void(0)"
-                           class="btn btn-warning btn-xs btn-loadmore-book"
-                           data-current-page="<%= books.item.current_page %>"
-                           data-next-page="<%= books.item.next_page %>">More
-                        </a>
+                    <div class="col-xs-12">
+                        <div class="shop-pagination pull-right">
+                            <ul id="pagination-book" class="pagination-sm pagination">
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <% } %>
             </div>
             <!-- Sidebar-Start -->
             <div class="col-xs-12 col-md-2">
@@ -113,24 +110,23 @@
 
 <%- contentFor('appjs') %>
 <script src="/javascripts/books/book.js" type="text/javascript"></script>
+<script src="/javascripts/paginations/paginate.js"></script>
 
 <script type="text/javascript">
-    $('.btn-loadmore-book').on('click', function () {
-        var nextPage = $(this).attr('data-next-page') !== undefined ? $(this).attr('data-next-page') : 1;
-        var categoryId = $('section').attr('data-category-id');
-        if (categoryId === undefined) {
-            location.reload();
-        }
+    var totalPages = Math.ceil("<%= books.item.total %>"/"<%= books.item.per_page %>");
+    var currentPage = parseInt("<%= books.item.current_page %>");
+    var nextPage = "<%= books.item.next_page %>"
 
-        Book.loadMoreBook({categoryId: categoryId, nextPage: nextPage});
+    Paginate.book({
+        totalPages: totalPages,
+        currentPage: currentPage,
+        nextPage: nextPage
     });
 
     $('#sort-book').on('change', function () {
         var sortBy = $('#sort-book').val();
         var categoryId = $('section').attr('data-category-id');
         var orderBy = $('#sort-book :selected').parent().attr('data-order-by') !== undefined ? $('#sort-book :selected').parent().attr('data-order-by'): 'desc';
-        var currentPage = $('.btn-loadmore-book').attr('data-current-page') !== undefined ?
-            $('.btn-loadmore-book').attr('data-current-page') : 1;
         var data = {
             categoryId: categoryId,
             sortBy: sortBy,
