--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -74,12 +74,11 @@
                 </div>
                 <div class="space-60"></div>
                 <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <a href="javascript:void(0)"
-                           class="btn btn-warning btn-xs btn-loadmore-book"
-                           data-next-page="<%= section.item.next_page %>"
-                           data-current-page="<%= section.item.current_page %>">More
-                        </a>
+                    <div class="col-xs-12">
+                        <div class="shop-pagination pull-right">
+                            <ul id="pagination-book" class="pagination-sm pagination">
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -112,29 +111,29 @@
 
 <%- contentFor('appjs') %>
 <script src="/javascripts/books/book.js" type="text/javascript"></script>
+<script src="/javascripts/paginations/paginate.js" type="text/javascript"></script>
 <script type="text/javascript">
-    $('.btn-loadmore-book').on('click', function () {
-        var nextPage = $(this).attr('data-next-page') !== undefined ? $(this).attr('data-next-page') : 1;
-        var field = $('section').attr('data-field');
-        if (field === undefined) {
-            location.reload();
-        }
+    var totalPages = Math.ceil("<%= section.item.total %>"/"<%= section.item.per_page %>");
+    var currentPage = parseInt("<%= section.item.current_page %>");
+    var nextPage = "<%= section.item.next_page %>";
 
-        Book.loadMoreBook({field: field, nextPage: nextPage});
+    Paginate.book({
+        totalPages: totalPages,
+        currentPage: currentPage,
+        nextPage: nextPage
     });
 
-    $('#sort-book').on('change', function (e) {
+    $('#sort-book').on('change', function () {
         var sortBy = $('#sort-book').val();
         var orderBy = $('#sort-book :selected').parent().attr('data-order-by');
         var field = $('section').attr('data-field');
-        var currentPage = $('.btn-loadmore-book').attr('data-current-page') !== undefined ?
-            $('.btn-loadmore-book').attr('data-current-page') : 1;
         var data = {
             field: field,
             currentPage: currentPage,
             sortBy: sortBy,
             orderBy: orderBy
         };
+
         if (field === undefined || sortBy === undefined) {
             location.reload();
         }
@@ -147,6 +146,7 @@
         $('.category-sidebar li.hidden').removeClass('hidden');
         $('#btn-loadmore-category').addClass('hidden');
     });
+
 </script>
 
 <script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
