get my books in profile page

--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,19 +1,23 @@
 <footer class="black-bg text-white">
-    <div class="space-60"></div>
+    <div class="space-20"></div>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4">
-                <a href="#"><img src="/images/logo_framgia.png" alt="library" class="logo-image"><span class="logo-text">Book</span></a>
+                <a href="#"><img src="/images/logo_framgia.png" alt="library" class="logo-image"><span class="logo-text">FBook</span></a>
                 <div class="space-20"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida, quam vitae est Sed non eros elementum nulla sodales ullamcorper.</p>
-                <div class="space-10"></div>
+                <p>A new world of reading awaits</p>
                 <ul class="list-inline list-unstyled social-list">
-                    <li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-                    <li><a href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="icofont icofont-social-behance"></i></a></li>
-                    <li><a href="#"><i class="icofont icofont-brand-linkedin"></i></a></li>
+                    <li>
+                        <a href="https://www.facebook.com/FramgiaVietnam" target="_blank">
+                            <i class="icofont icofont-social-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/company/framgia-vietnam" target="_blank">
+                            <i class="icofont icofont-brand-linkedin"></i>
+                        </a>
+                    </li>
                 </ul>
-                <div class="space-10"></div>
                 <ul class="list-unstyled list-inline tip yellow">
                     <li><i class="icofont icofont-square"></i></li>
                     <li><i class="icofont icofont-square"></i></li>
@@ -22,38 +26,31 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
                 <h4 class="text-white">Contact Us</h4>
-                <div class="space-20"></div>
                 <table class="table border-none addr-dt">
                     <tr>
                         <td><i class="icofont icofont-social-google-map"></i></td>
-                        <td><address>3050 Universal Blvd #190 Fort Lauderdale, FL, 33331, Sydney New York City</address></td>
+                        <td><address>13F Keangnam Landmark 72 Tower, Plot E6, Pham Hung Road, Nam Tu Liem, Ha Noi, Viet Nam</address></td>
                     </tr>
                     <tr>
                         <td><i class="icofont icofont-email"></i></td>
-                        <td>susislibrary@domain.com</td>
+                        <td>hr_team@framgia.com</td>
                     </tr>
                     <tr>
                         <td><i class="icofont icofont-phone"></i></td>
-                        <td>+62 582 528 527 21</td>
-                    </tr>
-                    <tr>
-                        <td><i class="icofont icofont-globe-alt"></i></td>
-                        <td><a href="www.susislibrary.html" target="_blank">www.susislibrary.com</a></td>
+                        <td> 84-4-3795-5417</td>
                     </tr>
                 </table>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
-                <h4 class="text-white">Useful Link</h4>
-                <div class="space-20"></div>
+                <h4 class="text-white">More Tools</h4>
                 <ul class="list-unstyled menu-tip">
-                    <li><a href="books.html">Costumer Service</a></li>
-                    <li><a href="books.html">Help Desk</a></li>
-                    <li><a href="books.html">Forum</a></li>
-                    <li><a href="books.html">Staff Profile</a></li>
-                    <li><a href="books.html">Live Chat</a></li>
+                    <li><a href="http://wsm.framgia.vn/" target="_blank">WSM</a></li>
+                    <li><a href="http://crb.framgia.vn/" target="_blank">CRB</a></li>
+                    <li><a href="http://poll.framgia.vn/" target="_blank">FPoll</a></li>
+                    <li><a href="http://club.framgia.vn/" target="_blank">FClub</a></li>
+                    <li><a href="http://survey.framgia.vn/" target="_blank">FSurvey</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="space-60"></div>
 </footer>
