--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -28,7 +28,7 @@
                     <!--Logo-->
                     <a href="/home" class="navbar-left show">
                         <img src="/images/logo_framgia.png" alt="library" class="logo-image">
-                        <span class="logo-text">Book</span>
+                        <span class="logo-text">FBook</span>
                     </a>
                     <div class="space-10"></div>
                 </div>
@@ -116,9 +116,8 @@
             <div class="row wow fadeInUp">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
                     <div class="jumbotron">
-                        <h1 class="text-white">More Than 458,948 Book Over Here</h1>
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida, quam vitae
-                            <br/> est Sed non eros elementum nulla sodales ullamcorper.</p>
+                        <h1 class="text-white">WELCOME TO THE BEST PLACE TO READ BOOKS</h1>
+                        <p class="text-white">Read, share and engage with great books</p>
                     </div>
                     <div class="title-bar white">
                         <ul class="list-inline list-unstyled">
