--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -74,6 +74,76 @@
     </div>
 </section>
 
+<% if (userId === user.id) { %>
+    <section class="relative">
+        <div class="container">
+            <div class="panel">
+                <div class="panel-heading">
+                    <ul class="nav nav-tabs">
+                        <li class=<%= pageReading !== 1 || pageWaiting === 1 && pageDone === 1 && pageSharing === 1 ? "active" : "" %>>
+                            <a data-toggle="tab" href="#reading_books">Reading Books</a>
+                        </li>
+                        <li class=<%= pageWaiting !== 1 ? "active" : "" %>>
+                            <a data-toggle="tab" href="#waiting_books">Waiting Books</a>
+                        </li>
+                        <li class=<%= pageDone !== 1 ? "active" : "" %>>
+                            <a data-toggle="tab" href="#done_books">Done Books</a>
+                        </li>
+                        <li class=<%= pageSharing !== 1 ? "active" : "" %>>
+                            <a data-toggle="tab" href="#sharing_books">Sharing Books</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="panel-body">
+                    <div class="tab-content">
+                        <% if (pageReading !== 1 || pageWaiting === 1 && pageDone === 1 && pageSharing === 1) { %>
+                            <div class="tab-pane fade in active" id="reading_books">
+                        <% } else { %>
+                            <div class="tab-pane fade" id="reading_books">
+                        <% } %>
+
+                        <%- include('../shared/myBooks', {books: readingBooks, pageName: 'pageReading'}); %>
+                        </div>
+
+                        <% if (pageWaiting !== 1) { %>
+                            <div class="tab-pane fade in active" id="waiting_books">
+                        <% } else { %>
+                            <div class="tab-pane fade" id="waiting_books">
+                        <% } %>
+
+                        <%- include('../shared/myBooks', {books: waitingBooks, pageName: 'pageWaiting'}); %>
+                        </div>
+
+                        <% if (pageDone !== 1) { %>
+                            <div class="tab-pane fade in active" id="done_books">
+                        <% } else { %>
+                            <div class="tab-pane fade" id="done_books">
+                        <% } %>
+
+                        <%- include('../shared/myBooks', {books: doneBooks, pageName: 'pageDone'}); %>
+                        </div>
+
+                        <% if (pageSharing !== 1) { %>
+                            <div class="tab-pane fade in active" id="sharing_books">
+                        <% } else { %>
+                            <div class="tab-pane fade" id="sharing_books">
+                        <% } %>
+
+                        <%- include('../shared/myBooks', {books: sharingBooks, pageName: 'pageSharing'}); %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="space-20"></div>
+    </section>
+<% } %>
+
+<%- contentFor('appCss') %>
+<link href="/bower/bootstrap-star-rating/css/star-rating.css" rel="stylesheet" type="text/css">
+<link href="/bower/bootstrap-star-rating/css/theme-krajee-fa.css" rel="stylesheet" type="text/css">
+
 <%- contentFor('appjs') %>
+<script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
 <script src="/javascripts/users/list_category.js" type="text/javascript"></script>
 <script src="/javascripts/users/interestedCategories.js" type="text/javascript"></script>
